<resources>
    <string name="app_name">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Belum punya akun? <u>Daftar</u></string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="pengguna">Pengguna</string>
    <string name="admin">Admin</string>
    <string name="masuk_sebagai">Masuk sebagai:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="tambah_laporan">Tambah Laporan</string>
    <string name="tanggal_laporan">Tanggal Laporan</string>
    <string name="jumlah_uang">Jumlah Uang</string>
    <string name="keterangan">Keterangan</string>
    <string name="simpan">Simpan</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masuk_sebagai_administrator"><u>Masuk Sebagai Administrator</u></string>
    <string name="jenis_kas">Jenis Kas</string>
</resources>