<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    android:padding="16dp"
    tools:context=".admin.AddLaporanActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_laporan"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/tgl_laporan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/tanggal_laporan"
            android:background="@color/white"
            android:padding="10dp"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:id="@+id/jumlah_uang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/jumlah_uang"
            android:inputType="number"
            android:background="@color/white"
            android:padding="10dp"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:id="@+id/keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/keterangan"
            android:inputType="textMultiLine"
            android:background="@color/white"
            android:padding="10dp"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kas"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_pemasukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pemasukan"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <RadioButton
            android:id="@+id/rb_pengeluaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengeluaran"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnsimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/simpan"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="12dp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>