<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    android:padding="16dp"
    tools:context=".verification.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:id="@+id/nama_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/nama_lengkap"
            android:background="@color/white"
            android:padding="10dp"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:id="@+id/alamat_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/alamat"
            android:background="@color/white"
            android:padding="10dp"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:id="@+id/telp_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/no_telepon"
            android:inputType="phone"
            android:background="@color/white"
            android:padding="10dp"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/email"
            android:background="@color/white"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:id="@+id/pw_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/password"
            android:background="@color/white"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp">
        <EditText
            android:id="@+id/konfirpw_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/password"
            android:background="@color/white"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk_sebagai"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_margin="10dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengguna"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginEnd="24dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="18sp"/>
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/btndaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Daftar Akun"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="12dp"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>